argocd/slack-viz-prod/slack-viz-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-viz-app
  labels:
    app: slack-viz-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-viz-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: slack-viz-app
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
      - image: yny.ocir.io/ax1dvc8vmenm/slack-view
        name: app
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 20m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: slack-viz-app
spec:
  type: ClusterIP
  selector:
    app: slack-viz-app
  ports:
  - port: 80
    targetPort: 3000
