argocd/slack-viz-prod/slack-viz-mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: slack-viz-mongodb
  labels:
    app: slack-viz-mongodb
spec:
  serviceName: slack-viz-mongodb
  replicas: 1
  selector:
    matchLabels:
      app: slack-viz-mongodb
  template:
    metadata:
      labels:
        app: slack-viz-mongodb
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
      - image: docker.io/mongo:7
        name: mongodb
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1638Mi
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: slack-viz-mongodb
spec:
  type: ClusterIP
  selector:
    app: slack-viz-mongodb
  ports:
  - port: 27017
    targetPort: 27017
